--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,7 +12,7 @@ application.secret="8Ew5ZsXwsIId`[1yp^?X/>hw[Y8ZVlKkf:xT6i<jvjyHNd@XJx=WW;u<8pZr
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="en,es"
 
 # Global object class
 # ~~~~~
